--- a/docs/lora_tuning.ipynb
+++ b/docs/lora_tuning.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/jimmyliao/workshop-gemma/blob/main/docs/lora_tuning.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Tce3stUlHN0L"
       },
       "source": [
@@ -21,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "cellView": "form",
         "id": "tuOe1ymfHZPu"
@@ -85,9 +75,9 @@
         "\n",
         "LLMs are extremely large in size (parameters in the order of billions). Full fine-tuning (which updates all the parameters in the model) is not required for most applications because typical fine-tuning datasets are relatively much smaller than the pre-training datasets.\n",
         "\n",
-        "[Low Rank Adaptation (LoRA)](https://arxiv.org/abs/2106.09685){:.external} is a fine-tuning technique which greatly reduces the number of trainable parameters for downstream tasks by freezing the weights of the model and inserting a smaller number of new weights into the model. This makes training with LoRA much faster and more memory-efficient, and produces smaller model weights (a few hundred MBs), all while maintaining the quality of the model outputs.\n",
+        "[Low Rank Adaptation (LoRA)](https://arxiv.org/abs/2106.09685) is a fine-tuning technique which greatly reduces the number of trainable parameters for downstream tasks by freezing the weights of the model and inserting a smaller number of new weights into the model. This makes training with LoRA much faster and more memory-efficient, and produces smaller model weights (a few hundred MBs), all while maintaining the quality of the model outputs.\n",
         "\n",
-        "This tutorial walks you through using KerasNLP to perform LoRA fine-tuning on a Gemma 2B model using the [Databricks Dolly 15k dataset](https://huggingface.co/datasets/databricks/databricks-dolly-15k){:.external}. This dataset contains 15,000 high-quality human-generated prompt / response pairs specifically designed for fine-tuning LLMs."
+        "This tutorial walks you through using KerasNLP to perform LoRA fine-tuning on a Gemma 2B model using the [Databricks Dolly 15k dataset](https://huggingface.co/datasets/databricks/databricks-dolly-15k). This dataset contains 15,000 high-quality human-generated prompt / response pairs specifically designed for fine-tuning LLMs."
       ]
     },
     {
@@ -109,7 +99,7 @@
         "\n",
         "To complete this tutorial, you will first need to complete the setup instructions at [Gemma setup](https://ai.google.dev/gemma/docs/setup). The Gemma setup instructions show you how to do the following:\n",
         "\n",
-        "* Get access to Gemma on [kaggle.com](https://kaggle.com){:.external}.\n",
+        "* Get access to Gemma on [kaggle.com](https://kaggle.com).\n",
         "* Select a Colab runtime with sufficient resources to run\n",
         "  the Gemma 2B model.\n",
         "* Generate and configure a Kaggle username and API key.\n",
@@ -192,10 +182,10 @@
       "execution_count": 3,
       "metadata": {
         "id": "1eeBtYqJsZPG",
-        "outputId": "43267d45-81dd-46bb-c646-1ce7b412e987",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "43267d45-81dd-46bb-c646-1ce7b412e987"
       },
       "outputs": [
         {
@@ -277,10 +267,10 @@
       "execution_count": 6,
       "metadata": {
         "id": "xRaNCPUXKoa7",
-        "outputId": "5391991f-613d-46f8-9ca0-8b04c5cc8d93",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5391991f-613d-46f8-9ca0-8b04c5cc8d93"
       },
       "outputs": [
         {
@@ -351,7 +341,7 @@
       "source": [
         "## Load Model\n",
         "\n",
-        "KerasNLP provides implementations of many popular [model architectures](https://keras.io/api/keras_nlp/models/){:.external}. In this tutorial, you'll create a model using `GemmaCausalLM`, an end-to-end Gemma model for causal language modeling. A causal language model predicts the next token based on previous tokens.\n",
+        "KerasNLP provides implementations of many popular [model architectures](https://keras.io/api/keras_nlp/models/). In this tutorial, you'll create a model using `GemmaCausalLM`, an end-to-end Gemma model for causal language modeling. A causal language model predicts the next token based on previous tokens.\n",
         "\n",
         "Create the model using the `from_preset` method:"
       ]
@@ -361,11 +351,11 @@
       "execution_count": 8,
       "metadata": {
         "id": "vz5zLEyLstfn",
-        "outputId": "cbcaffbc-28c1-4de3-d95a-4d20742ee9f2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 595
-        }
+        },
+        "outputId": "cbcaffbc-28c1-4de3-d95a-4d20742ee9f2"
       },
       "outputs": [
         {
@@ -606,10 +596,10 @@
       "execution_count": 9,
       "metadata": {
         "id": "ZwQz3xxxKciD",
-        "outputId": "9f9234b5-cc6b-499e-a40c-eee8fd2babb9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9f9234b5-cc6b-499e-a40c-eee8fd2babb9"
       },
       "outputs": [
         {
@@ -688,10 +678,10 @@
       "execution_count": 10,
       "metadata": {
         "id": "lorJMbsusgoo",
-        "outputId": "4ef5e6b7-d3f9-4acf-dce8-fb8d3baaad6f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4ef5e6b7-d3f9-4acf-dce8-fb8d3baaad6f"
       },
       "outputs": [
         {
@@ -763,11 +753,11 @@
       "execution_count": 11,
       "metadata": {
         "id": "RCucu6oHz53G",
-        "outputId": "a6dd8188-95ec-487c-93ec-c3db6fb8c279",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 397
-        }
+        },
+        "outputId": "a6dd8188-95ec-487c-93ec-c3db6fb8c279"
       },
       "outputs": [
         {
@@ -914,10 +904,10 @@
       "execution_count": 12,
       "metadata": {
         "id": "_Peq7TnLtHse",
-        "outputId": "2bf830ce-e58d-4eb8-d87c-7ceb978f4d2a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2bf830ce-e58d-4eb8-d87c-7ceb978f4d2a"
       },
       "outputs": [
         {
@@ -1007,10 +997,10 @@
       "execution_count": 13,
       "metadata": {
         "id": "Y7cDJHy8WfCB",
-        "outputId": "15435701-bf16-4d11-b0e0-bc955d7d6c39",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "15435701-bf16-4d11-b0e0-bc955d7d6c39"
       },
       "outputs": [
         {
@@ -1058,10 +1048,10 @@
       "execution_count": 14,
       "metadata": {
         "id": "X-2sYl2jqwl7",
-        "outputId": "2a1fb73e-c61c-45e0-b041-f129f9c59b58",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2a1fb73e-c61c-45e0-b041-f129f9c59b58"
       },
       "outputs": [
         {
@@ -1119,8 +1109,8 @@
         "\n",
         "* Learn how to [generate text with a Gemma model](https://ai.google.dev/gemma/docs/get_started).\n",
         "* Learn how to perform [distributed fine-tuning and inference on a Gemma model](https://ai.google.dev/gemma/docs/distributed_tuning).\n",
-        "* Learn how to [use Gemma open models with Vertex AI](https://cloud.google.com/vertex-ai/docs/generative-ai/open-models/use-gemma){:.external}.\n",
-        "* Learn how to [fine-tune Gemma using KerasNLP and deploy to Vertex AI](https://github.com/GoogleCloudPlatform/vertex-ai-samples/blob/main/notebooks/community/model_garden/model_garden_gemma_kerasnlp_to_vertexai.ipynb){:.external}."
+        "* Learn how to [use Gemma open models with Vertex AI](https://cloud.google.com/vertex-ai/docs/generative-ai/open-models/use-gemma).\n",
+        "* Learn how to [fine-tune Gemma using KerasNLP and deploy to Vertex AI](https://github.com/GoogleCloudPlatform/vertex-ai-samples/blob/main/notebooks/community/model_garden/model_garden_gemma_kerasnlp_to_vertexai.ipynb)."
       ]
     }
   ],
@@ -1128,8 +1118,7 @@
     "accelerator": "GPU",
     "colab": {
       "name": "lora_tuning.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
