--- a/paligemma/fine_tune_PaliGemma_for_image.ipynb
+++ b/paligemma/fine_tune_PaliGemma_for_image.ipynb
@@ -12,6 +12,17 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "### Reference:\n",
+        "\n",
+        "- Smol Vision 🐣 [link](https://github.com/merveenoyan/smol-vision/blob/main/Fine_tune_PaliGemma.ipynb)"
+      ],
+      "metadata": {
+        "id": "tCWp542qsRMj"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "j1S447KSf6YH"
       },
